--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "NODE_PATH=. npm-run-all --parallel webpack-dev-server dev-server",
+    "webpack-dev-server": "node webpack/webpack-dev-server.js --use-strict",
+    "dev-server": "nodemon start.js --ext js --legacy-watch --watch",
     "build": "webpack",
     "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,21 +26,37 @@
     "autoprefixer": "^6.3.5",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-jsx": "^6.5.0",
+    "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-survivejs-kanban": "^0.3.3",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
+    "node-sass": "^3.4.2",
+    "nodemon": "^1.9.1",
+    "npm-run-all": "^1.7.0",
+    "postcss-loader": "^0.8.2",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.10.0",
     "webpack-isomorphic-tools": "^2.2.43"
   },
   "dependencies": {
+    "babel-runtime": "^6.6.1",
     "bluebird": "^3.3.4",
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "ejs": "^2.4.1",
     "es6-promise": "^3.1.2",
     "express": "^4.13.4",
+    "express-useragent": "^0.2.4",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.7.0",
     "node-uuid": "^1.4.7",
@@ -47,6 +66,7 @@
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
     "react-scroll-up": "^1.1.3",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "serve-favicon": "^2.3.0"
   }
 }
