--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-redux": "^4.4.1",
     "react-scroll-up": "^1.1.3",
     "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1",
     "serve-favicon": "^2.3.0"
   }
 }
