--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-syntax-jsx": "^6.5.0",
+    "babel-plugin-transform-react-jsx": "^6.7.4",
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
@@ -64,6 +65,7 @@
     "express-useragent": "^0.2.4",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.7.0",
+    "material-ui": "^0.15.0-alpha.2",
     "node-uuid": "^1.4.7",
     "npm-run-all": "^1.7.0",
     "react": "^0.14.8",
@@ -71,6 +73,7 @@
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
     "react-scroll-up": "^1.1.3",
+    "react-tap-event-plugin": "^0.2.2",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
     "serve-favicon": "^2.3.0"
