--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-survivejs-kanban": "^0.3.3",
     "css-loader": "^0.23.1",
+    "express-session": "^1.13.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
@@ -45,6 +46,9 @@
     "nodemon": "^1.9.1",
     "npm-run-all": "^1.7.0",
     "postcss-loader": "^0.8.2",
+    "redux-devtools": "^3.2.0",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.8",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
@@ -57,13 +61,17 @@
   "dependencies": {
     "babel-runtime": "^6.6.1",
     "bluebird": "^3.3.4",
+    "body-parser": "^1.15.0",
     "classnames": "^2.2.3",
+    "cookie-parser": "^1.4.1",
     "css-loader": "^0.23.1",
     "ejs": "^2.4.1",
     "es6-promise": "^3.1.2",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "express-useragent": "^0.2.4",
     "isomorphic-fetch": "^2.2.1",
+    "keinewaste-sdk": "^0.1.3",
     "lodash": "^4.7.0",
     "material-ui": "^0.15.0-alpha.2",
     "node-uuid": "^1.4.7",
@@ -72,6 +80,8 @@
     "react-addons-pure-render-mixin": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
+    "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.1",
     "react-scroll-up": "^1.1.3",
     "react-tap-event-plugin": "^0.2.2",
     "redux": "^3.3.1",
