--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
     "classnames": "^2.2.3",
+    "compression": "^1.6.1",
     "cookie-parser": "^1.4.1",
     "css-loader": "^0.23.1",
     "ejs": "^2.4.1",
