--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "express-session": "^1.13.0",
     "express-useragent": "^0.2.4",
     "isomorphic-fetch": "^2.2.1",
-    "keinewaste-sdk": "^0.1.3",
+    "keinewaste-sdk": "*",
     "lodash": "^4.7.0",
     "material-ui": "^0.15.0-alpha.2",
     "node-uuid": "^1.4.7",
