--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "npm-run-all": "^1.7.0",
     "react": "^0.14.8",
     "react-addons-pure-render-mixin": "^0.14.8",
+    "react-cookie": "^0.4.5",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
