--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "keinewaste-sdk": "*",
     "lodash": "^4.7.0",
     "material-ui": "^0.15.0-alpha.2",
+    "moment": "^2.12.0",
+    "momentjs": "^1.0.2",
     "node-uuid": "^1.4.7",
     "npm-run-all": "^1.7.0",
     "react": "^0.14.8",
