--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "isomorphic-fetch": "^2.2.1",
     "keinewaste-sdk": "*",
     "lodash": "^4.7.0",
-    "material-ui": "^0.15.0-alpha.2",
+    "material-ui": "0.15.0-alpha.2",
     "moment": "^2.12.0",
     "momentjs": "^1.0.2",
     "node-uuid": "^1.4.7",
